add font awesome layout_bootstrap

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,4 @@
-Home Pages
+<div class="jumbotron text-center">
+	<h1>Welcome to Dev center</h1>
+	<h3>a member can meet Developer in July</h3>
+</div>
