--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Sass' , root_path , class: "navbar-brand" %>
+      <%= link_to  root_path , class: "navbar-brand" do %>
+		<i class="fa fa-users"></i> Dev match <%= icon("users") %>
+      <%end%>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -28,8 +30,9 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
-<%= yield %>
+<div class="container">
+	<%= yield %>
+</div>
 
 </body>
 </html>
