--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -17,19 +17,24 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Dev match' , root_path , class: "navbar-brand" %>
+      <%= link_to  root_path , class: "navbar-brand"  do %>
+          <i class="fa fa-users" > Dev match</i> 
+      <%end%>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">   
       <ul class="nav navbar-nav navbar-right">
-	  <%= link_to "About" , about_path , class: "navbar-brand"%>       
+	  <%= link_to  about_path , class: "navbar-brand" do %>  
+      <%= icon("users") %> About
+    <%end %>     
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
-<%= yield %>
+<div class="container">
+  <%= yield %>
+</div>
 
 </body>
 </html>
