add contact page to navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,16 +18,18 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to  root_path , class: "navbar-brand"  do %>
-          <i class="fa fa-users" > Dev match</i> 
+          <i class="fa fa-users" ></i> Dev match
       <%end%>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">   
       <ul class="nav navbar-nav navbar-right">
-	  <%= link_to  about_path , class: "navbar-brand" do %>  
-      <%= icon("users") %> About
+	  <li><%= link_to  about_path , class: "navbar-brand" do %>  
+      <%= icon("users") %> About</li>
     <%end %>     
+    <li><%= link_to "Contact Us", new_contact_path , class: "navbar-brand" %></li>
+
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
