--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -14,7 +14,7 @@
 				<%= f.label :comments %>
 				<%= f.text_area :comments , class: "form-control" %>
 			</div>
-			<%= f.submit 'Submit' , class: "btn btn-defaut" %>
+			<%= f.submit 'Submit' , class: "btn btn-primary" %>
 			<%end%>
 		</div>
 	</div>
