--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,18 @@
         <%end%>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">   
+   
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
+      <div class=" nav navbar-nav navbar-right">
+        <% if current_user %>
+          <%= button_to "Sign Out", destroy_user_session_path , method: :delete , class: "btn btn-primary navbar-btn" %>
+        <% else %>
+          <%= link_to "Login" , new_user_session_path , class: "btn btn-primary navbar-btn" , method: :get %>
+
+          <%= link_to "Sign Up" , new_user_registration_path , class: "btn btn-success navbar-btn" , method: :get %>
+        <% end %>
+      </div>  
       <ul class="nav navbar-nav navbar-right">
 	  <li><%= link_to  about_path , class: "navbar-brand" do %>  
       <%= icon("users") %> About</li>
