--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
 
   <div class="col-md-4 col-md-offset-4">
     <div class="well">
-      <% if params[:query] == '3' %>
+      <% if params[:plan] == '3' %>
         <%= render "pro_form" %>
       <% else %>
         <%= render "basic_form" %>
