--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -20,7 +20,21 @@
         <%= f.password_field :password_confirmation, autocomplete: "off" , class: "form-control" %>
       </div>
 
-     
+      <div class="form-group">
+        <%= label_tag :card_number, "Credit Card Number" %>
+        <%= text_field_tag :card_number, nil , name:nil , class: "form-control"  %>
+      </div>
+      
+      <div class="form-group">
+        <%= label_tag :card_code , "Security Code on Card CVV" %>
+        <%= text_field_tag :car_code, nil , name: nil , class: "form-control"%>
+      </div>
+      <div class="form-group">
+        <%= label_tag :card_month , "Card Expiration" %>
+        <%= select_month nil , {add_month_number: true}, {name: nil , id: "card_month"} %>
+        <%= select_year nil , {start_year: Date.today.year , end_year: Date.today.year + 15 }, {name: nil , id: "card_year"}%>
+
+      </div>
       <div class="actions form-group">
         <%= f.submit "Sign up" , class: "btn btn-success" %>
       </div>
