--- a/app/assets/stylesheets/custome.css.scss
+++ b/app/assets/stylesheets/custome.css.scss
@@ -14,3 +14,9 @@ body {
   background:         linear-gradient(90deg, #F09819 10%, #EDDE5D 90%); /* W3C */
                 
 }
+
+.alert {
+	color: #3C763D;
+background-color: #DFF0D8;
+border-color: #D6E9C6;
+}
