--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,9 @@
 <head>
   <title>SampleCode</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'https://js.stripe.com/v2/', type='text/javascript' %>
   <%= javascript_include_tag 'application' %>
+  <%= tag :meta, :name => 'stripe-key' , :content => STRIPE_PUBLIC_KEY %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -32,7 +34,7 @@
         <% else %>
           <%= link_to "Login" , new_user_session_path , class: "btn btn-primary navbar-btn" , method: :get %>
 
-          <%= link_to "Sign Up" , new_user_registration_path , class: "btn btn-success navbar-btn" , method: :get %>
+          
         <% end %>
       </div>  
       <ul class="nav navbar-nav navbar-right">
@@ -47,8 +49,11 @@
 </nav>
 <div class="container">
   <% flash.each do |key, value| %>
-    <%= content_tag :div , value , class: "col-md-4 col-md-offset-4 alert alert-#{key}" %>
+    <%= content_tag :div , value , class: " alert alert-#{key}" %>
   <%end%>
+</div>
+
+<div class="container">
   <%= yield %>
 </div>
 
