--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div class="col-md-4 col-md-offset-4 text-center ">
-    <% if params[:plan] == 'pro' %>
+    <% if params[:plan] == '3' %>
       <h1>Pro Account</h1>
       <p>Sign up for pro account for $10/month and get access to the Community.</p>
     <% else %>
@@ -13,7 +13,7 @@
 
   <div class="col-md-4 col-md-offset-4">
     <div class="well">
-      <% if params[:plan] == 'pro'  %>
+      <% if params[:plan] == '3'  %>
         <%= render "pro_form" %>
       <% else %>
         <%= render "basic_form" %>
