--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,20 +1,49 @@
+
 <div class="jumbotron text-center">
 	<h1>Welcome to Dev center</h1>
 	<h3>a member can meet Developer in July</h3>
 </div>
 <div class="row">
+	<% if user_signed_in? %>
+
 	<div class="col-md-6">
 		<div class="well">
-			<h2 class="text-center">Basic Membership</h2>
-			<h4>Sign up for free and get basic access to the community.</h4>
-			<%= link_to "Sign up with Basic" , new_user_registration_path(plan:@basic_plan.name), class: "btn btn-primary btn-lg btn-block"  %>
+			<h3 class="text-center">Your Profile</h3>
+			<% if current_user.profile %>
+				<%= link_to "Edit profile" , edit_user_profile_path(user_id: current_user.id) , class: "btn btn-default btn-lg btn-block" %>
+				<%= link_to "View profile" , user_path(current_user) , class: "btn btn-default btn-lg btn-block" %>
+			<%else%>
+				<%= link_to "Create your profile" , new_user_profile_path(current_user) %>
+			<%end%>
 		</div>
 	</div>
+
 	<div class="col-md-6">
 		<div class="well">
-			<h2 class="text-center">Pro Membership</h2>
-			<h4>Sign up for pro account for $10/month and get access to the Community.</h4>
-			<%= link_to "Sign up with Pro" , new_user_registration_path(plan:@pro_plan.name), class: "btn btn-success btn-lg btn-block" %>
+			<h3 class="text-center">Comunity</h3>
+			<p>Contact us to meet other Developer , Investor , Instructor , and get a job </p>
+			<%= link_to "Visited Comunity" , "#" , class: "btn btn-default btn-lg btn-block" %>
 		</div>
 	</div>
+	
+
+	<%else %>
+
+		<div class="col-md-6">
+			<div class="well">
+				<h2 class="text-center">Basic Membership</h2>
+				<h4>Sign up for free and get basic access to the community.</h4>
+				<%= link_to "Sign up with Basic" , new_user_registration_path(plan:@basic_plan.id), class: "btn btn-primary btn-lg btn-block"  %>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="well">
+				<h2 class="text-center">Pro Membership</h2>
+				<h4>Sign up for pro account for $10/month and get access to the Community.</h4>
+				<%= link_to "Sign up with Pro" , new_user_registration_path(plan:@pro_plan.id), class: "btn btn-success btn-lg btn-block" %>
+			</div>
+		</div>
+
+	<%end%>
+	
 </div>
