--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,10 +2,8 @@
 <%= @user.profile.first_name %> <%= @user.profile.last_name %>
 <%= @user.profile.job_title %> <br/>
 
-<%  if current_user.plan_id == 3 %>
+<%  if current_user.plan_id == "1" || current_user.plan_id == "5" %>
 		<%= @user.profile.phone_number %> <br/>
-		<%= @user.profile.contact_email %> <br/>
-<% else %>
-	<%= redirect_to(root_url) %>
+		<%= @user.profile.contact_email %> <br/>	
 <% end %>
 <%= @user.profile.description %> <br/>
